Implement upload file

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-node": "0.0.1-security",
     "body-parser": "1.19.0",
     "cfenv": "1.2.2",
+    "crypto-js": "^4.0.0",
     "dotenv": "8.0.0",
     "express": "4.17.1",
     "fabric-network": "2.2.0",
@@ -35,6 +36,7 @@
     "ibm-cos-sdk": "1.5.4",
     "joi": "^17.2.1",
     "jsonwebtoken": "8.5.1",
+    "jsrsasign": "^8.0.24",
     "knox": "^0.9.2",
     "lodash": "^4.17.20",
     "log4js": "6.1.0",
