Remove hardcoded enrolments update - registerUser - integrate with boilerplate user register. update - enrollAdmin - move credentials to .env. update - server startup - enroll Hyperledger admin on startup. update - user register controller - register HL appUser on user register. update - user login controller - connect to gateway on user login.

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@
 HAPI_PORT=8000
 APP_NAME='User-Onboarding-Module'
 JWT_SECRET_KEY='sUPerSeCuREKeY&^$^&$^%$^%7782348723t4872t34Ends'
+CA_ADMIN_ID = "admin"
+CA_ADMIN_PWD = "adminpw"
+CA_ADDRESS = 'ca.org1.example.com'
+MSP_ID = 'Org1MSP'
