--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "ibm-cos-sdk": "1.5.4",
     "joi": "^17.2.1",
     "jsonwebtoken": "8.5.1",
-    "jsrsasign": "^8.0.24",
+    "jsrsasign": ">=10.2.0",
     "knox": "^0.9.2",
     "lodash": "^4.17.20",
     "log4js": "6.1.0",
@@ -46,7 +46,7 @@
     "path": "^0.12.7",
     "randomstring": "1.1.5",
     "socket.io": ">=2.4.0",
-    "underscore": "1.9.1",
+    "underscore": ">=1.12.1",
     "validator": "11.0.0"
   },
   "author": "Sanchit Dang",
